<resources>
    <string name="app_name">Exam2</string>
    <string name="action_settings">Salir</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_register">Register</string>
    <string name="action_about">Acerca de</string>
    <string name="title_activity_about">Acerca de</string>

    <string name="action_synchronize">Sincroniza</string>
    <string name="action_activate">Activar</string>
    <string name="action_edit">Modificar</string>


    <string name="message_name">Nombre</string>
    <string name="message_last_name">Apellidos</string>
    <string name="message_site">Sito Web</string>
    <string name="message_address">Dirección</string>
    <string name="name_use">Usuario</string>
    <string name="clave_user">Contraseña</string>

    <string name="btn_msg_save">Guardar</string>

    <string name="action_back">Atras</string>
    <string name="action_contacts">Contactos</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_usua_rios">UsuaRios</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="section_tab01">Log</string>
    <string name="section_tab02">Favorites</string>
    <string name="section_tab03">Contacts</string>
    <string name="section_tab04">Message</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_tab">Tab</string>
</resources>
