<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.william.exam2.Register"
    tools:showIn="@layout/activity_register">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="pe.edu.upeu.registro.Register"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp"
        tools:showIn="@layout/activity_register">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="11dp"
            android:text="@string/message_name"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/Nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="49dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Nombre"
            android:layout_below="@+id/Nombre"
            android:layout_marginTop="24dp"
            android:text="@string/message_last_name" />

        <EditText
            android:id="@+id/Apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/Apellidos"
            android:layout_below="@+id/Apellidos"
            android:layout_marginTop="20dp"
            android:text="@string/name_use" />

        <EditText
            android:id="@+id/Usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView3"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clave_user"
            android:layout_below="@+id/Usuario"
            android:layout_alignStart="@+id/Usuario"
            android:layout_marginTop="18dp" />

        <EditText
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_below="@+id/textView4"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="42dp"
            android:text="@string/btn_msg_save" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
